--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,6 @@
     <title>Landing Ortnec</title>
   </head>
   <body>
-    <div id="root"></div>
-
-
-
+    <div id="container"></div>
   </body>
 </html>
